Bug fix contact form backround now visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,7 +321,7 @@ main {
 /* Contact page */
 /* Form */
 #contact {
-    background-image: url("../images/Wicklow\ Quarry\ 3D\ Hillshade\ Model.webp") no-repeat center/cover;
+    background: url("../images/Wicklow\ Quarry\ 3D\ Hillshade\ Model.webp") no-repeat center/cover;
     background-position: 50%;
     padding: 20px 10% 10px 10%;
     flex-grow: 1;
